force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/HealthCloudGA__ProgramPatientAffiliation__c.object-meta.xml
<CustomObject>
    <label>Program Patient Affiliation</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Patient Affiliation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>