force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__EndDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EndDate__c</fullName>
    <description>Date the patient’s enrollment ends for the program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the patient’s enrollment ends for the program.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>