force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__Program__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Program__c</fullName>
    <description>Identifies which program the patient is enrolled in.</description>
    <inlineHelpText>Identifies which program the patient is enrolled in.</inlineHelpText>
    <label>Program</label>
    <referenceTo>HealthCloudGA__Program__c</referenceTo>
    <relationshipLabel>Program Patient Affiliation</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>