force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__Provider__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>HealthCloudGA__Provider__c</referenceTo>
    <relationshipLabel>Program Patient Affiliation</relationshipLabel>
    <relationshipName>ProgramPatientAffiliation</relationshipName>
    <type>Lookup</type>
</CustomField>