force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__Recalculate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Recalculate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag that is set when patient information that influences the program is changed,allows recalculating program data.</description>
    <label>Recalculate</label>
    <type>Checkbox</type>
</CustomField>