force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__StartDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StartDate__c</fullName>
    <description>Date the patient’s enrollment begins for the program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the patient’s enrollment begins for the program.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>