force-app/main/default/src/objects/HealthCloudGA__ProgramPatientAffiliation__c/fields/HealthCloudGA__Status__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Status__c</fullName>
    <description>Medicare CCM program status.</description>
    <inlineHelpText>Medicare CCM program status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>In Program</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>